Fix bug #1 - commands from file don't start

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Python: модуль",
             "type": "python",
             "request": "launch",
-            "module": "python",
+            "module": "customcmd",
             "justMyCode": true,
-            "cwd": "${workspaceFolder}/programm"
+            "args": ["${workspaceFolder}/scripts/test/test1.dtc"]
         }
     ]
 }
